--- a/Project_Python/Python Data Structures.ipynb
+++ b/Project_Python/Python Data Structures.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90f9c19a",
+   "id": "c52a30e3",
    "metadata": {},
    "source": [
     "### Python Data Structures\n",
+    "\n",
+    "links https://www.geeksforgeeks.org/python-data-structures/\n",
+    "\n",
     "\n",
     "Data Structures are a way of organizing data so that it can be accessed more efficiently depending upon the situation. Data Structures are fundamentals of any programming language around which a program is built. Python helps to learn the fundamental of these data structures in a simpler way as compared to other programming languages."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd881aa4",
+   "id": "345a9378",
    "metadata": {},
    "source": [
     "Lists\n",
@@ -27,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4726e8dd",
+   "id": "c2ef94ef",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de8e69ae",
+   "id": "9eb1e529",
    "metadata": {},
    "source": [
     "### Example: Python List Operations"
@@ -54,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d84dc80",
+   "id": "0996f166",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb829469",
+   "id": "c0d1fb56",
    "metadata": {},
    "source": [
     "### Dictionary\n",
@@ -122,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c68ff348",
+   "id": "b8343031",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc79656",
+   "id": "7f27db2b",
    "metadata": {},
    "source": [
     "### Tuple\n",
@@ -177,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1c41fb6",
+   "id": "f8d62d85",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d197a3c2",
+   "id": "79052588",
    "metadata": {},
    "source": [
     "### Set\n",
@@ -250,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b5d5011",
+   "id": "9fee1557",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcf7439",
+   "id": "da32f6c9",
    "metadata": {},
    "source": [
     "### Frozen Sets\n",
@@ -302,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "09400d85",
+   "id": "25265532",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba950e1f",
+   "id": "7d4e6abd",
    "metadata": {},
    "source": [
     "### String\n",
@@ -353,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee4f010a",
+   "id": "912606b0",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f4cc9a",
+   "id": "f1a05255",
    "metadata": {},
    "source": [
     "### Bytearray\n",
@@ -399,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc600f95",
+   "id": "88aa659d",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42cd58b2",
+   "id": "4ca11034",
    "metadata": {},
    "source": [
     "### Counters\n",
@@ -453,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "99a1830b",
+   "id": "9c498893",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ea84d3",
+   "id": "cd821386",
    "metadata": {},
    "source": [
     "### OrderedDict\n",
@@ -494,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6743cfc0",
+   "id": "a6550c39",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8418a4ed",
+   "id": "28a0ca09",
    "metadata": {},
    "source": [
     "### DefaultDict\n",
@@ -563,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "85054162",
+   "id": "cf54454f",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db9bddd",
+   "id": "80796dd3",
    "metadata": {},
    "source": [
     "### ChainMap\n",
@@ -609,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "53b75d16",
+   "id": "78af31a9",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a9c34c",
+   "id": "b02eea0a",
    "metadata": {},
    "source": [
     "### NamedTuple\n",
@@ -664,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "965f1d7b",
+   "id": "05428bc6",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60d508d",
+   "id": "3b44ea5a",
    "metadata": {},
    "source": [
     "### Deque\n",
@@ -710,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c324d4da",
+   "id": "92f9a2ea",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "532fc3d5",
+   "id": "340dd78c",
    "metadata": {},
    "source": [
     "### UserDict\n",
@@ -782,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2badc72a",
+   "id": "1f9480d7",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff76245a",
+   "id": "01160b31",
    "metadata": {},
    "source": [
     "### UserList\n",
@@ -853,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2919f2fa",
+   "id": "fea1a686",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e9412f",
+   "id": "a6db0126",
    "metadata": {},
    "source": [
     "### UserString\n",
@@ -930,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b45d755a",
+   "id": "e74ed737",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d670da9",
+   "id": "e1fca039",
    "metadata": {},
    "source": [
     "### Linked List\n",
@@ -992,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8b6dd04b",
+   "id": "32b16565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811b839f",
+   "id": "5b279863",
    "metadata": {},
    "source": [
     "Let us create a simple linked list with 3 nodes."
@@ -1025,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f5f62168",
+   "id": "fb48b7ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba022b9b",
+   "id": "4308cb31",
    "metadata": {},
    "source": [
     "### Linked List Traversal \n",
@@ -1113,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "74e1248c",
+   "id": "2877f05e",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e819fa",
+   "id": "6ec53b07",
    "metadata": {},
    "source": [
     "### Stack\n",
@@ -1205,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "46f472c0",
+   "id": "cc12c7ca",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3216c3f6",
+   "id": "61ce6f1a",
    "metadata": {},
    "source": [
     "#### Implementation using collections.deque:\n",
@@ -1266,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8dc5ba8c",
+   "id": "fbeea5c7",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85121314",
+   "id": "de7eb4c6",
    "metadata": {},
    "source": [
     "#### Implementation using queue module\n",
@@ -1329,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d5468a83",
+   "id": "76d07faa",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d7f2e8",
+   "id": "45b80ecb",
    "metadata": {},
    "source": [
     "### Queue\n",
@@ -1413,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "50d8f49c",
+   "id": "23a05b8a",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdefa048",
+   "id": "b506af2b",
    "metadata": {},
    "source": [
     "#### Implementation using collections.deque\n",
@@ -1472,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "05b59ac3",
+   "id": "ea26b24f",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12da36f",
+   "id": "ba3f730c",
    "metadata": {},
    "source": [
     "#### Implementation using the queue.Queue\n",
@@ -1533,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "32a85ff4",
+   "id": "ddf892fa",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d8512fc",
+   "id": "f1e403d9",
    "metadata": {},
    "source": [
     "### Priority Queue\n",
@@ -1610,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9a2c6d8d",
+   "id": "98df730d",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31073d80",
+   "id": "dabd1753",
    "metadata": {},
    "source": [
     "#### Heap queue (or heapq)\n",
@@ -1683,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "17a02491",
+   "id": "41c62655",
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca9ae54b",
+   "id": "48296bcf",
    "metadata": {},
    "source": [
     "### Binary Tree\n",
@@ -1763,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b15f5656",
+   "id": "c3c50fe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7879af6",
+   "id": "f922b574",
    "metadata": {},
    "source": [
     "Now let’s create a tree with 4 nodes in Python. Let’s assume the tree structure looks like below – \n",
@@ -1797,7 +1800,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "957c4924",
+   "id": "95273b9e",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0431a85b",
+   "id": "8964a4a6",
    "metadata": {},
    "source": [
     "#### Tree Traversal\n",
@@ -1911,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2921685f",
+   "id": "fb474205",
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e3b582",
+   "id": "7b98c66c",
    "metadata": {},
    "source": [
     "Time Complexity –  O(n) \n",
@@ -2038,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3da4b480",
+   "id": "4582b57d",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6b17af",
+   "id": "df88ace9",
    "metadata": {},
    "source": [
     "Time Complexity: O(n) \n",
@@ -2133,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3dc29f9b",
+   "id": "4c3498fe",
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a23b957",
+   "id": "46ead316",
    "metadata": {},
    "source": [
     "#### Adjacency List\n",
@@ -2224,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "747161ff",
+   "id": "eec963ae",
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d3032d",
+   "id": "bd5cfbe4",
    "metadata": {},
    "source": [
     "### Graph Traversal\n",
@@ -2323,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a84543ea",
+   "id": "0359a9a1",
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a167d0",
+   "id": "d390cc04",
    "metadata": {},
    "source": [
     "Time Complexity: O(V+E) where V is the number of vertices in the graph and E is the number of edges in the graph.\n",
@@ -2429,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1da0a359",
+   "id": "cff4d60b",
    "metadata": {},
    "outputs": [
     {
@@ -2510,7 +2513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5163edd8",
+   "id": "cb29bca1",
    "metadata": {},
    "source": [
     "Time complexity: O(V + E), where V is the number of vertices and E is the number of edges in the graph.\n",
